Drop support for craftbukkit/spigot-based servers under 1.19. Bump minimum Java version to 17.