@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.shininet.bukkit</groupId>
         <artifactId>PlayerHeads</artifactId>
-        <version>5.20.2-SNAPSHOT</version>
+        <version>5.20.4-SNAPSHOT</version>
     </parent>
     <artifactId>PlayerHeads-compatibility</artifactId>
     <packaging>pom</packaging>
@@ -13,13 +13,9 @@
         <module>PlayerHeads-compatibility-api</module>
         <module>PlayerHeads-common-support</module>
         <module>PlayerHeads-craftbukkit-support</module>
-        <module>PlayerHeads-paperapi-support</module>
-        <module>PlayerHeads-legacy-support</module>
         <module>PlayerHeads-modern-support</module>
-        <module>PlayerHeads-glowstone-1.12-support</module>
         <module>PlayerHeads-craftbukkit-1.13-support</module>
         <module>PlayerHeads-craftbukkit-1.14-support</module>
-        <module>PlayerHeads-craftbukkit-1.8-support</module>
         <module>PlayerHeads-compatibility-lib</module>
     </modules>
     
@@ -39,8 +35,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <scm>
@@ -53,5 +49,25 @@
         <system>GitHub</system>
         <url>https://github.com/crashdemons/PlayerHeads/issues</url>
     </issueManagement>
-
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <!-- fix errors when using pockermock under JDK 17 -->
+                  <argLine>-Dfile.encoding=UTF8 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
